--- a/portfolio/templates/portfolio/heroSection.html
+++ b/portfolio/templates/portfolio/heroSection.html
@@ -1,12 +1,13 @@
 {% load static %}
-<section class="relative w-full h-96 text-slate-400 flex items-center justify-center">
-    <div class="text-center max-w-3xl mx-auto px-6 mt-0 md:mt-32">
-        <h1 class="text-4xl md:text-5xl font-bold mb-4 text-slate-300 hover:text-slate-200">
+<section class="relative w-full h-96 flex items-center justify-center">
+    <div class="text-center max-w-3xl mx-auto px-6 mt-10 md:mt-32">
+        <h1 class="text-4xl md:text-5xl font-bold mb-4">
             Bikram Gurung  
         </h1>
         <p class="text-lg mb-8 leading-relaxed opacity-80">
-            I am a passionate <span class="border-b-2 text-slate-300 border-lime-300">web developer</span> with a focus on creating modern, responsive, and user-friendly web applications.
+            I am a passionate <span class="border-b-2 border-lime-300">web developer</span> with a focus on creating modern, responsive, and user-friendly web applications.
         </p>
-        <p class="text-slate-300">Want to know more about me? <a href="#" class="hover:border-b text-slate-400 border-blue-500">Click here.</a></p>
+        <p class="">Want to know more about me? <a href="#" class="hover:border-b border-blue-500 font-bold">Click here.</a></p>
     </div>
 </section>
+
