--- a/portfolio/templates/portfolio/footer.html
+++ b/portfolio/templates/portfolio/footer.html
@@ -1,4 +1,4 @@
-<footer class="text-white -mt-8 md:mt-0">
+<footer class="-mt-8 md:mt-0">
     <div class="flex justify-center space-x-8">
         <a href="https://www.linkedin.com/in/bikram-gurung-1749b9319/" target="_blank" class="hover:text-blue-500 transition duration-300">
             <i class="bx bxl-linkedin text-2xl"></i>
