--- a/portfolio/templates/portfolio/heroSection.html
+++ b/portfolio/templates/portfolio/heroSection.html
@@ -1,13 +1,11 @@
 {% load static %}
 <section class="relative w-full h-96 flex items-center justify-center">
     <div class="text-center max-w-3xl mx-auto px-6 mt-12 md:mt-32">
-        <h1 class="text-4xl md:text-5xl font-bold mb-4">
-            Bikram Gurung  
-        </h1>
+        <h1 class="text-4xl md:text-5xl font-bold mb-4"> <span class="text-xl">hi i'm </span>Bikram Gurung</h1>
         <p class="text-lg mb-8 leading-relaxed opacity-80">
-            I am a passionate <span class="border-b-2 border-lime-300">web developer</span> with a focus on creating modern, responsive, and user-friendly web applications.
+            a passionate <span class="border-b-2 border-lime-300">web developer</span> with a focus on creating modern, responsive, and user-friendly web applications.
         </p>
-        <p class="-mt-4 md:mt-0">Want to know more about me? <a href="#" class="hover:border-b-2 border-blue-600 font-bold hover:text-blue-600">Click here.</a></p>
+        <p class="-mt-4 md:mt-0">Want to know more about me? <a href="{% url 'about' %}" class="hover:border-b-2 border-blue-600 font-bold hover:text-blue-600">Click here.</a></p>
     </div>
 </section>
 
