add project and details

--- a/portfolio/static/portfolio/css/style.css
+++ b/portfolio/static/portfolio/css/style.css
@@ -22,3 +22,10 @@ body.dark {
     filter: blur(20px); /* Blurring to soften edges for glow */
 }
 
+.scrollbar-hide {
+    -ms-overflow-style: none;  /* Internet Explorer 10+ */
+    scrollbar-width: none;  /* Firefox */
+}
+.scrollbar-hide::-webkit-scrollbar {
+    display: none;  /* Safari and Chrome */
+}
