--- a/portfolio/templates/portfolio/base.html
+++ b/portfolio/templates/portfolio/base.html
@@ -19,6 +19,15 @@
     {% block herosection %}{% endblock %}
     {% block aboutme %}{% endblock %}
 
+    {% block projects %}{% endblock %}
+    {% block projectDetails %}{% endblock %}
+    {% block blogDetails %}{% endblock %}
+    {% block noteDetails %}{% endblock %}
+
+    {% block contact %}{% endblock %}
+
+
+
 
     {% block footer %} {% include "portfolio/footer.html" %}{% endblock %}
 
