--- a/portfolio/templates/portfolio/base.html
+++ b/portfolio/templates/portfolio/base.html
@@ -26,6 +26,9 @@
 
     {% block contact %}{% endblock %}
 
+    {% block blog %}{% endblock %}
+    {% block explore_blog %}{% endblock %}
+    {% block blogP_Details %}{% endblock %}
 
 
 
