--- a/portfolio/templates/portfolio/navbar.html
+++ b/portfolio/templates/portfolio/navbar.html
@@ -9,7 +9,7 @@
         <a href="{% url 'about' %}" class="hover:text-slate-400 transition-all duration-300 ease-in-out"><li>about</li></a>
         <a href="{% url 'project' %}" class="hover:text-slate-400 transition-all duration-300 ease-in-out"><li>projects</li></a>
         {% comment %} <a href="#" class="hover:text-slate-400 transition-all duration-300 ease-in-out"><li>services</li></a> {% endcomment %}
-        <a href="#" class="hover:text-slate-400 transition-all duration-300 ease-in-out"><li>blog</li></a>
+        <a href="{% url 'blog' %}" class="hover:text-slate-400 transition-all duration-300 ease-in-out"><li>blog</li></a>
         <a href="{% url 'contact' %}" class="hover:text-slate-400 transition-all duration-300 ease-in-out"><li>contact</li></a>
         <li><i class='bx bx-sun cursor-pointer text-xl' id="desktop-theme-toggle"></i></li>
 
@@ -38,7 +38,7 @@
         <li><a href="{% url 'about' %}" class="font-semibold text-lg hover:border-b-2 hover:border-green-500 pb-1 hover:text-slate-400 transition-all duration-300 ease-in-out">About</a></li>
         <li><a href="{% url 'project' %}" class="font-semibold text-lg hover:border-b-2 hover:border-green-500 pb-1 hover:text-slate-400 transition-all duration-300 ease-in-out">Projects</a></li>
         {% comment %} <li><a href="#" class="font-semibold text-lg hover:border-b-2 hover:border-green-500 pb-1 hover:text-slate-400 transition-all duration-300 ease-in-out">Services</a></li> {% endcomment %}
-        <li><a href="#" class="font-semibold text-lg hover:border-b-2 border-green-500 pb-1 hover:text-slate-400 transition-all duration-300 ease-in-out">Blog</a></li>
+        <li><a href="{% url 'blog' %}" class="font-semibold text-lg hover:border-b-2 border-green-500 pb-1 hover:text-slate-400 transition-all duration-300 ease-in-out">Blog</a></li>
         <li><a href="{% url 'contact' %}" class="font-semibold text-lg hover:border-b-2 border-green-500 pb-1 hover:text-slate-400 transition-all duration-300 ease-in-out">Contact</a></li>
         
     </ul>
