--- a/portfolio/templates/portfolio/blog.html
+++ b/portfolio/templates/portfolio/blog.html
@@ -18,7 +18,7 @@
         <!-- CTA Buttons -->
         <div class="flex justify-center gap-6 mt-6">
             <a href="{% url 'explore-blog' %}" class="px-6 py-3 bg-pink-600 hover:bg-pink-700 font-semibold rounded transition duration-300 transform hover:scale-105">Explore Blogs</a>
-            <a href="#subscribe" class="px-6 py-3 bg-transparent border-2 border-white hover:bg-white hover:text-black font-semibold rounded hover:border-black transition duration-300 transform hover:scale-105">Subscribe</a>
+            {% comment %} <a href="#subscribe" class="px-6 py-3 bg-transparent border-2 border-white hover:bg-white hover:text-black font-semibold rounded hover:border-black transition duration-300 transform hover:scale-105">Subscribe</a> {% endcomment %}
         </div>
     </div>
 </section>
