--- a/portfolio/templates/portfolio/blog.html
+++ b/portfolio/templates/portfolio/blog.html
@@ -5,7 +5,7 @@
 {% block projectDetails %}{% endblock %}
 {% block blogDetails %}{% endblock %}
 {% block noteDetails %}{% endblock %}
-{% block blog %}
+{% block content %}
 <section class="bg-cover bg-center h-[calc(100vh-5rem)]  flex items-center justify-center relative">
     <!-- Dark Overlay -->
     {% comment %} <div class="absolute inset-0 bg-black opacity-50"></div> {% endcomment %}
