--- a/portfolio/templates/portfolio/blogP_details.html
+++ b/portfolio/templates/portfolio/blogP_details.html
@@ -5,7 +5,7 @@
 {% block projectDetails %}{% endblock %}
 {% block blogDetails %}{% endblock %}
 {% block noteDetails %}{% endblock %}
-{% block blogP_Details %}
+{% block content %}
 
 <div class="container mx-auto px-6 py-12">
     <!-- Blog Article -->
