--- a/portfolio/templates/portfolio/explore_blog.html
+++ b/portfolio/templates/portfolio/explore_blog.html
@@ -7,7 +7,7 @@
 {% block blogDetails %}{% endblock %}
 {% block noteDetails %}{% endblock %}
 
-{% block explore_blog %}
+{% block content %}
 
 {% for blog in blogs %}
 <div class="container mx-auto px-4 py-12">
