--- a/portfolio/templates/portfolio/heroSection.html
+++ b/portfolio/templates/portfolio/heroSection.html
@@ -1,7 +1,7 @@
 {% load static %}
 <section class="relative w-full h-96 flex items-center justify-center">
     <div class="text-center max-w-3xl mx-auto px-6 mt-12 md:mt-32">
-        <h1 class="text-4xl md:text-5xl font-bold mb-4"> <span class="text-xl">hi i'm </span>Bikram Gurung</h1>
+        <h1 class="text-4xl md:text-5xl font-bold mb-4"> <span class="text-xl">hi, i'm </span>Bikram Gurung</h1>
         <p class="text-lg mb-8 leading-relaxed opacity-80">
             a passionate <span class="border-b-2 border-lime-300">web developer</span> with a focus on creating modern, responsive, and user-friendly web applications.
         </p>
