--- a/portfolio/templates/portfolio/index.html
+++ b/portfolio/templates/portfolio/index.html
@@ -1,3 +1,5 @@
 {% extends "portfolio/base.html" %}
 {% load static %}
-{% block herosection %} {% include "portfolio/heroSection.html" %}{% endblock %}
+{% block content %}
+{% include "portfolio/heroSection.html" %}
+{% endblock %}
