--- a/portfolio/templates/portfolio/note_details.html
+++ b/portfolio/templates/portfolio/note_details.html
@@ -1,7 +1,7 @@
 {% extends "portfolio/base.html" %}
 {% load static %}
 {% block heroSection %}{% endblock %}
-{% block noteDetails %}
+{% block content %}
 <div class="container mx-auto px-4 py-8">
     <!-- Page Heading -->
     <h2 class="text-3xl font-extrabold text-center mb-8">Project Title: Online Notes Sharing Platform</h2>
