--- a/portfolio/templates/portfolio/contact.html
+++ b/portfolio/templates/portfolio/contact.html
@@ -5,8 +5,8 @@
 {% block projectDetails %}{% endblock %}
 {% block blogDetails %}{% endblock %}
 {% block noteDetails %}{% endblock %}
-{% block contact %}
-<section class="relative bg-cover bg-center bg-no-repeat h-80 md:h-96">
+{% block content %}
+{% comment %} <section class="relative bg-cover bg-center bg-no-repeat h-80 md:h-96">
     <!-- Responsive Border Container -->
     <div class="absolute inset-0 mx-4 sm:mx-10 md:mx-20 mt-6 opacity-60 shadow-xl mt-8"></div>
 
@@ -15,7 +15,7 @@
         <h1 class="text-3xl sm:text-4xl md:text-5xl font-bold mb-4">Get in Touch</h1>
         <p class="text-base sm:text-lg md:text-xl font-light">I'd love to hear from you! Let's connect and bring your ideas to life.</p>
     </div>
-</section>
+</section> {% endcomment %}
 
 
 <div class="container mx-auto px-6 py-8">
