--- a/portfolio/templates/portfolio/fashionmart_details.html
+++ b/portfolio/templates/portfolio/fashionmart_details.html
@@ -1,7 +1,7 @@
 {% extends "portfolio/base.html" %}
 {% load static %}
 {% block heroSection %}{% endblock %}
-{% block projectDetails %}
+{% block content %}
 
 <div class="container mx-auto px-4 py-8">
     <!-- Page Heading -->
