--- a/portfolio/templates/portfolio/about.html
+++ b/portfolio/templates/portfolio/about.html
@@ -3,7 +3,7 @@
 {% block herosection %}{% endblock %}
 {% block content %}
 
-<div class="min-h-screen py-20 md:py-32 px-6 font-sans">
+<div class="min-h-screen py-20 md:py-32 px-6">
     {% comment %} about me {% endcomment %}
     <div class="max-w-6xl mx-auto mb-16 border-b border-slate-600 pb-24">
         <div class="grid grid-cols-1 md:grid-cols-2 gap-12">
